# zkvote

./: .gitignore  Cargo.toml
src/: main.rs  merkle.rs  utils.rs
src/commands/: create.rs  mod.rs  register.rs  tally.rs  vote.rs
src/zk/: circuit.nr  proof.rs
