[package]
name = "chain"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
rand = "0.8"
sha2 = "0.10"
hex = "0.4" 
chrono = { version = "0.4", features = ["clock"] }
anyhow = "1"